--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Frisco Template
-url: "https://brave-submarine.cloudvent.net"
+title: Richmond Greenway Film
+url: "https://richmondgreenwayfilm.com"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,15 +10,15 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: App marketing template for Jekyll.
+description: Home of the Richmond Greenway Film
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Frisco Template
+  name: Richmond Freenway Film
   links:
-    - https://github.com/CloudCannon/frisco-jekyll-template
+    - https://richmondgreenwayfilm.com
 
 # -----
 # Build
