--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,10 +1,12 @@
 left_links:
-  - name: Blog
-    link: /blog/
-  - name: About
-    link: /about/
-  - name: Contact
-    link: /contact/
+  - name: Home
+    link: /
+  - name: Watch
+    link: /watch/
+  - name: Orgs
+    link: /orgs/
+  - name: Archive
+    link: /archive/
 right_links:
   - name:
     link: richmondgreenwayfilm@gmail.com
