--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ collections:
   staff_members:
     _hide_content: true
     _icon: account_circle
+  partner_orgs:
+    _hide_content: true
+    _icon: account_circle
 
 paginate: 10
 paginate_path: "/blog/:num/"
@@ -56,6 +59,16 @@ defaults:
     scope:
       path: ""
       type: "staff_members"
+    values:
+      _options:
+        image_path:
+          width: 440
+          height: 440
+          uploads_dir: "/images/staff_members"
+  -
+    scope:
+      path: ""
+      type: "partner_orgs"
     values:
       _options:
         image_path:
