--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,6 @@ exclude:
   - LICENCE
 
 collections:
-  staff_members:
-    _hide_content: true
-    _icon: account_circle
   partner_orgs:
     _hide_content: true
     _icon: account_circle
@@ -55,16 +52,16 @@ jekyll-archives:
   enabled: ['categories']
 
 defaults:
-  -
-    scope:
-      path: ""
-      type: "staff_members"
-    values:
-      _options:
-        image_path:
-          width: 440
-          height: 440
-          uploads_dir: "/images/staff_members"
+  #-
+  #  scope:
+  #    path: ""
+  #    type: "staff_members"
+  #  values:
+  #    _options:
+  #      image_path:
+  #        width: 440
+  #        height: 440
+  #        uploads_dir: "/images/staff_members"
   -
     scope:
       path: ""
