--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,8 @@ collections:
   partner_orgs:
     _hide_content: true
     _icon: account_circle
+  archive_items:
+    _hide_content: true
 
 paginate: 10
 paginate_path: "/blog/:num/"
